Indentation and some small icon edits for i3status

--- a/i3status/.config/i3status/config
+++ b/i3status/.config/i3status/config
@@ -1,43 +1,44 @@
 general {
-  colors = true
-  color_good = "#99cc99"
-  color_degraded = "#ffcc66"
-  color_bad = "#f2777a"
-  interval = 5
+	colors = true
+	color_good = "#99cc99"
+	color_degraded = "#ffcc66"
+	color_bad = "#f2777a"
+	separator = " "
+	interval = 5
 }
 
 order += "volume master"
-order += "wireless _first_"
 order += "battery 0"
+order += "wireless _first_"
 order += "cpu_temperature 0"
 order += "tztime local"
 
 volume master {
-  format = " %volume"
-  format_muted = ""
-}
-
-wireless _first_ {
-  format_up = " %essid"
-  format_down = ""
+	format = " %volume"
+	format_muted = ""
 }
 
 battery 0 {
-  format = "%status %percentage"
-  status_chr = ""
-  status_bat = ""
-  status_unk = ""
-  status_full = ""
-  low_threshold = 15
+	format = "%status %percentage"
+	status_chr = ""
+	status_bat = ""
+	status_unk = ""
+	status_full = ""
+	low_threshold = 15
+}
+
+wireless _first_ {
+	format_up = " %essid"
+	format_down = ""
 }
 
 cpu_temperature 0 {
-  format = " %degrees °C"
-  format_above_threshold = " %degrees °C"
-  max_threshold = 87
-  path = "/sys/devices/platform/coretemp.0/hwmon/hwmon0/temp1_input"
+	format = " %degrees °C"
+	format_above_threshold = " %degrees °C"
+	max_threshold = 87
+	path = "/sys/devices/platform/coretemp.0/hwmon/hwmon0/temp1_input"
 }
 
 tztime local {
-  format = " %Y-%m-%d %H:%M"
+	format = " %Y-%m-%d %H:%M"
 }
