--- a/sway/config
+++ b/sway/config
@@ -40,9 +40,8 @@ bindsym $mod+Shift+q kill
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+e exit
 
-floating_modifier $mod normal
-
 ## Moving
+### Default
 bindsym $mod+$left focus left
 bindsym $mod+$down focus down
 bindsym $mod+$up focus up
@@ -53,12 +52,30 @@ bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$right move right
 
+### Arrow Keys
+bindsym $mod+Left focus left
+bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
+
+bindsym $mod+Shift+Left move left
+bindsym $mod+Shift+Down move down
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
+
 ## Resizing
 mode "resize" {
+	### Default
 	bindsym $left resize shrink width 10 px or 10 ppt
 	bindsym $down resize grow height 10 px or 10 ppt
 	bindsym $up resize shrink height 10 px or 10 ppt
 	bindsym $right resize grow width 10 px or 10 ppt
+
+	### Arrow Keys
+	bindsym Left resize shrink width 10 px or 10 ppt
+	bindsym Down resize grow height 10 px or 10 ppt
+	bindsym Up resize shrink height 10 px or 10 ppt
+	bindsym Right resize grow width 10 px or 10 ppt
 
 	bindsym Return mode "default"
 	bindsym Escape mode "default"
@@ -104,8 +121,7 @@ bindsym $mod+Shift+8 move container to workspace 8:VIII
 bindsym $mod+Shift+9 move container to workspace 9:IX
 bindsym $mod+Shift+0 move container to workspace 10:X
 
-## Miscellaneous
-### Audio
+## Audio
 bindsym XF86AudioRaiseVolume exec pamixer -ui 5
 bindsym XF86AudioLowerVolume exec pamixer -ud 5
 bindsym XF86AudioMute exec pamixer -t
@@ -116,9 +132,12 @@ bindsym XF86AudioStop exec cmus-remote -s
 bindsym XF86AudioPrev exec cmus-remote -r
 bindsym XF86AudioNext exec cmus-remote -n
 
+## Miscellaneous
 bindsym XF86Launch1 exec $menu
 bindsym XF86ScreenSaver exec $lock
 bindsym Print exec $grab
+
+floating_modifier $mod normal
 
 # Status Bar
 bar {
