Added a simple git oneliner format

--- a/git/config
+++ b/git/config
@@ -16,6 +16,9 @@
 [pack]
 	threads = 0
 
+[pretty]
+	simple = %C(bold yellow)%h%C(reset) %<(72,trunc)%s %C(blue)%aN%C(reset) %C(italic green)(%ar)
+
 [pull]
 	rebase = preserve
 
