More MPV tweaks

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -3,16 +3,20 @@ include=~~/profiles.conf
 profile=gpu-hq
 
 # Video
-hwdec=auto
+#framedrop=no
+#hwdec=auto
 vd-lavc-dr=yes
 
 # Audio
 ad-lavc-threads=0
 audio-display=no
+audio-file-auto=exact
 
 # Subtitles
 sub-ass-vsfilter-blur-compat=no
+sub-auto=fuzzy
 sub-fix-timing=yes
+#sub-border-size=2
 
 # Window
 title=${media-title}
@@ -22,8 +26,9 @@ cursor-autohide-fs-only=yes
 native-keyrepeat=yes
 
 # OSD
+osd-bar=no
 osd-font=monospace
-osd-border-size=0
+osd-border-size=2
 osd-scale=0.5
 
 # Screenshot
@@ -37,13 +42,14 @@ tls-verify=yes
 rtsp-transport=lavf
 
 # GPU renderer options
-scale=ewa_lanczossharp
-cscale=ewa_lanczossharp
-tscale=oversample
+#scale=ewa_lanczossharp
+#cscale=ewa_lanczossoft
+#tscale=oversample
 scaler-lut-size=10
 interpolation=yes
 opengl-pbo=yes
 temporal-dither=yes
+icc-profile-auto=yes
 
 # Miscellaneous
 video-sync=display-resample
