--- a/mpv/profiles.conf
+++ b/mpv/profiles.conf
@@ -1,7 +1,19 @@
+# Automatic
+[extension.webm]
+loop-file=inf
+
+[protocol.http]
+#profile=low-latency
+
+[protocol.https]
+profile=protocol.http
+
+# Custom
 [anime]
 alang=ja,jpn
 slang=en,eng,fr,fra,fre
 profile=gpu-hq
+video-sync=audio
 
 [movie]
 profile=gpu-hq
