Final MPV tweaks

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -3,8 +3,7 @@ include=~~/profiles.conf
 profile=gpu-hq
 
 # Video
-#framedrop=no
-#hwdec=auto
+hwdec=auto
 vd-lavc-dr=yes
 
 # Audio
@@ -13,14 +12,16 @@ audio-display=no
 audio-file-auto=exact
 
 # Subtitles
-sub-ass-vsfilter-blur-compat=no
+sub-ass-force-style=Kerning=yes
 sub-auto=fuzzy
-sub-fix-timing=yes
-#sub-border-size=2
+sub-border-size=2
 
 # Window
 title=${media-title}
 cursor-autohide-fs-only=yes
+
+# Demuxer
+#prefetch-playlist=yes
 
 # Input
 native-keyrepeat=yes
@@ -33,7 +34,7 @@ osd-scale=0.5
 
 # Screenshot
 screenshot-tag-colorspace=yes
-screenshot-template="%F - %P"
+screenshot-template="%F (%P)"
 screenshot-directory=~/Pictures/Screenshots
 screenshot-jpeg-quality=100
 
@@ -44,12 +45,11 @@ rtsp-transport=lavf
 # GPU renderer options
 #scale=ewa_lanczossharp
 #cscale=ewa_lanczossoft
-#tscale=oversample
-scaler-lut-size=10
+tscale=oversample
 interpolation=yes
 opengl-pbo=yes
 temporal-dither=yes
 icc-profile-auto=yes
 
 # Miscellaneous
-video-sync=display-resample
+#video-sync=display-resample
