--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -3,11 +3,11 @@ print_info() {
     info kernel
     info line_break
 
-    info "$(color 1)Model" model
-    info "$(color 2)CPU" cpu
-    info "$(color 3)GPU" gpu
-    info "$(color 4)Memory" memory
-    info "$(color 5)Disk" disk
+    info "Model" model
+    info "CPU" cpu
+    info "GPU" gpu
+    info "Memory" memory
+    info "Disk" disk
 }
 
 # Kernel
