--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -1,11 +1,15 @@
 print_info() {
     info title
     info kernel
+
     info line_break
 
     info "Model" model
     info "CPU" cpu
     info "GPU" gpu
+
+    info line_break
+
     info "Memory" memory
     info "Disk" disk
 }
