--- a/git/config
+++ b/git/config
@@ -11,9 +11,9 @@
 	renames = copies
 
 [include]
-	path = alias.inc
-	path = url.inc
-	path = user.inc
+	path = alias
+	path = url
+	path = user
 
 [pretty]
 	simple = %C(bold yellow)%h %C(auto)%<(72,trunc)%s%C(blue) %aN%C(green) %ar%C(red)%d
