--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -49,6 +49,7 @@ tscale=oversample
 interpolation=yes
 opengl-pbo=yes
 temporal-dither=yes
+#hdr-compute-peak=yes
 icc-profile-auto=yes
 
 # Miscellaneous
