Git difftool/mergetool and other minor tweaks

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -35,7 +35,7 @@ osd-scale=0.5
 # Screenshot
 screenshot-tag-colorspace=yes
 screenshot-template="%F (%P)"
-screenshot-directory=~/Pictures/Screenshots
+#screenshot-directory=~/Pictures/Screenshots
 screenshot-jpeg-quality=100
 
 # Network
