--- a/git/config
+++ b/git/config
@@ -9,11 +9,27 @@
 	algorithm = histogram
 	colorMoved = true
 	renames = copies
+	tool = vimdiff
+
+[difftool]
+	prompt = false
+
+[difftool "vimdiff"]
+	path = nvim
 
 [include]
 	path = alias
 	path = url
 	path = user
+
+[merge]
+	tool = vimdiff
+
+[mergetool]
+	prompt = false
+
+[mergetool "vimdiff"]
+	path = nvim
 
 [pretty]
 	simple = %C(bold yellow)%h %C(auto)%<(72,trunc)%s%C(blue) %aN%C(green) %ar%C(red)%d
