Updated mpv config to 0.29

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -27,7 +27,7 @@ title=${media-title}
 native-keyrepeat=yes
 
 # OSD
-osd-bar=no
+osd-on-seek=msg
 osd-font=monospace
 osd-border-size=2
 osd-scale=0.5
@@ -49,7 +49,8 @@ tscale=oversample
 interpolation=yes
 opengl-pbo=yes
 temporal-dither=yes
-#hdr-compute-peak=yes
+#opengl-glfinish=yes
+#opengl-waitvsync=yes
 icc-profile-auto=yes
 
 # Miscellaneous
