Tweaks to git, mpv, cmus, taskwarrior

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -21,12 +21,13 @@ sub-border-size=2
 title=${media-title}
 
 # Demuxer
-#prefetch-playlist=yes
+prefetch-playlist=yes
 
 # Input
 native-keyrepeat=yes
 
 # OSD
+osd-bar=no
 osd-on-seek=msg
 osd-font=monospace
 osd-border-size=2
@@ -35,7 +36,7 @@ osd-scale=0.5
 # Screenshot
 screenshot-tag-colorspace=yes
 screenshot-template="%F (%P)"
-#screenshot-directory=~/Pictures/Screenshots
+screenshot-directory=~/Pictures/Screenshots
 screenshot-jpeg-quality=100
 
 # Network
@@ -49,11 +50,11 @@ tscale=oversample
 interpolation=yes
 opengl-pbo=yes
 temporal-dither=yes
-#opengl-glfinish=yes
-#opengl-waitvsync=yes
+opengl-glfinish=yes
+opengl-waitvsync=yes
 icc-profile-auto=yes
 
 # Miscellaneous
-#video-sync=display-resample
+video-sync=display-resample
 
 # vim: filetype=cfg
