--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -19,6 +19,7 @@ sub-border-size=2
 
 # Window
 title=${media-title}
+keep-open=yes
 
 # Demuxer
 prefetch-playlist=yes
@@ -34,10 +35,11 @@ osd-border-size=2
 osd-scale=0.5
 
 # Screenshot
+screenshot-format=png
 screenshot-tag-colorspace=yes
 screenshot-template="%F (%P)"
 screenshot-directory=~/Pictures/Screenshots
-screenshot-jpeg-quality=100
+screenshot-png-compression=9
 
 # Network
 tls-verify=yes
